--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: _2_do
+name: two_do
 description: "A new Flutter project."
 publish_to: 'none'
 version: 0.1.0
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +18,14 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+
+fonts: 
+  - family: Quicksand
+    fonts:
+    - asset: fonts/Quicksand-VariableFont_wght.ttf
+      style: italic
+    - asset: fonts/Quicksand-VariableFont_wght.ttf
+      weight: 700
+    - asset: fonts/Quicksand-VariableFont_wght.ttf
+      weight: 300
