--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.1.5+1
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  build_runner: ^2.10.4
 
 flutter:
   uses-material-design: true
